--- a/LibaryXMLAuto/LibaryXMLAuto.csproj
+++ b/LibaryXMLAuto/LibaryXMLAuto.csproj
@@ -54,6 +54,10 @@
     <Compile Include="ModelXmlAuto\ModelFpdId\FpdReg.cs">
       <DependentUpon>FpdReg.xsd</DependentUpon>
     </Compile>
+    <Compile Include="ModelXmlSql\ConvertModel\DesirializationSql\SqlDesirialization.cs" />
+    <Compile Include="ModelXmlSql\Model\FaceError\FaceMerginRest.cs">
+      <DependentUpon>FaceMerginRest.xsd</DependentUpon>
+    </Compile>
     <Compile Include="ReadOrWrite\CreateElement\CreteElement.cs" />
     <Compile Include="ErrorJurnal\ErrorJurnal.cs" />
     <Compile Include="ErrorJurnal\OkJurnal.cs" />
@@ -71,9 +75,7 @@
     <Compile Include="ReadOrWrite\LogicaXml\LogicaXml.cs" />
     <Compile Include="ReadOrWrite\XmlReadOrWrite.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ModelXmlSql\ConvertModel\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="ModelXmlAuto\ListInnSheme\FullInnCount.xsd">
       <SubType>Designer</SubType>
@@ -93,7 +95,9 @@
     <None Include="ModelXmlAuto\ModelSnuOne\SnuOneForm.xsd">
       <SubType>Designer</SubType>
     </None>
-    <Compile Include="ModelXmlSql\Model\FaceError\FaceMergin.xsd" />
+    <None Include="ModelXmlSql\Model\FaceError\FaceMerginRest.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="BeforeBuild" DependsOnTargets="CreateXsd" />
@@ -111,6 +115,7 @@
       <XsdFilesFpd Include="ModelXmlAuto\ModelFpdId\*.xsd" />
       <XsdFilessListInn Include="ModelXmlAuto\ListInnSheme\*.xsd" />
       <XsdFilesFid Include="ModelXmlAuto\ModelFidZorI\*.xsd" />
+      <XsdXmlSql Include="ModelXmlSql\Model\FaceError\*.xsd" />
     </ItemGroup>
     <Message Importance="high" Text="CreateXsd" />
     <GetFrameworkSdkPath>
@@ -125,5 +130,6 @@
     <Exec Command="&quot;$(XsdToolPath)\xsd.exe&quot; &quot;%(XsdFilesFpd.FullPath)&quot; /classes /namespace:$(RootNamespace)ModelXmlAuto.FpdReg /outputdir:ModelXmlAuto\ModelFpdId" />
     <Exec Command="&quot;$(XsdToolPath)\xsd.exe&quot; &quot;%(XsdFilessListInn.FullPath)&quot; /classes /namespace:$(RootNamespace)ModelXmlAuto.FullInnCount /outputdir:ModelXmlAuto\ListInnSheme" />
     <Exec Command="&quot;$(XsdToolPath)\xsd.exe&quot; &quot;%(XsdFilesFid.FullPath)&quot; /classes /namespace:$(RootNamespace)ModelXmlAuto.ModelFidZorI /outputdir:ModelXmlAuto\ModelFidZorI" />
+    <Exec Command="&quot;$(XsdToolPath)\xsd.exe&quot; &quot;%(XsdXmlSql.FullPath)&quot; /classes /namespace:$(RootNamespace)ModelXmlSql.Model.FaceError /outputdir:ModelXmlSql\Model\FaceError" />
   </Target>
 </Project>
