--- a/SqlLibaryIfns/SqlLibaryIfns.csproj
+++ b/SqlLibaryIfns/SqlLibaryIfns.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlSelect\SqlFaceMergin\FaceSelectError.cs" />
     <Compile Include="SqlSelect\SqlLk2\SelectSqlLk2.cs" />
+    <Compile Include="SqlZapros\Zapros\SqlZapros.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
