--- a/LibaryAIS3Windows/LibaryAIS3Windows.csproj
+++ b/LibaryAIS3Windows/LibaryAIS3Windows.csproj
@@ -56,6 +56,8 @@
     <Compile Include="ButtonsClikcs\SelectQbe\SelectQbe.cs" />
     <Compile Include="ExitLogica\Exit.cs" />
     <Compile Include="ExitLogica\ExitClass.cs" />
+    <Compile Include="ExitLogica\ExitTaskFull\Proverka.cs" />
+    <Compile Include="Mode\Analitic\Task\TaskZn.cs" />
     <Compile Include="Mode\Okp4\PravoZorI\Pravo.cs" />
     <Compile Include="Mode\Reg\Yvedomlenie\Yvedomlenia.cs" />
     <Compile Include="Mode\Okp4\SnuFormirovanie\SnuForm.cs" />
@@ -63,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadWindow\Read\Reades.cs" />
     <Compile Include="Status\StatusAis.cs" />
+    <Compile Include="Window\Otdel\Analitic\TeskText\ZachetVozvrat.cs" />
     <Compile Include="Window\Otdel\Okp4\PravoZorI\PravoZorI.cs" />
     <Compile Include="Window\Otdel\Okp4\Snu\SnuText.cs" />
     <Compile Include="Window\Otdel\Reg\Fpd\FpdText.cs" />
