--- a/LibaryCommandPublic/LibaryCommandPublic.csproj
+++ b/LibaryCommandPublic/LibaryCommandPublic.csproj
@@ -57,6 +57,7 @@
     <Compile Include="EventQbe\OKp4\EventOkp.cs" />
     <Compile Include="EventQbe\Reg\SelectEventQbe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestAutoit\Analitic\TheUserTask\AutoClikcsTask.cs" />
     <Compile Include="TestAutoit\Okp4\EditPravo\Pravo\CommandPravo.cs" />
     <Compile Include="TestAutoit\Okp4\SnuOneAuto\AutoCommand\AutoCklicsAisCommand.cs" />
     <Compile Include="TestAutoit\PublicCommand\CommandFormirovanie.cs" />
