Добился стабильности Angulr переделал структуру на более понятную. Пока не ясно ка подключить 2 root Module надо искать действующее решение работает но на странице не найден корневой элемент.

--- a/LibaryXMLAuto/LibaryXMLAuto.csproj
+++ b/LibaryXMLAuto/LibaryXMLAuto.csproj
@@ -63,6 +63,9 @@
     <Compile Include="ModelXmlSql\Model\FaceError\FaceMerginRest.cs">
       <DependentUpon>FaceMerginRest.xsd</DependentUpon>
     </Compile>
+    <Compile Include="ModelXmlSql\Model\Trebovanie\ModelTreb.cs">
+      <DependentUpon>ModelTreb.xsd</DependentUpon>
+    </Compile>
     <Compile Include="ReadOrWrite\CreateElement\CreteElement.cs" />
     <Compile Include="ErrorJurnal\ErrorJurnal.cs" />
     <Compile Include="ErrorJurnal\OkJurnal.cs" />
@@ -102,6 +105,9 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="ModelXmlSql\Model\FaceError\FaceMerginRest.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="ModelXmlSql\Model\Trebovanie\ModelTreb.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
