--- a/SyteIfns/tsconfig.json
+++ b/SyteIfns/tsconfig.json
@@ -1,12 +1,13 @@
-{  
+{
   "compilerOptions": {
     "target": "es5",
     "module": "es2015",
     "moduleResolution": "node",
-    "sourceMap": true,
+    "sourceMap": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": [ "es2015", "dom" ],
+
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true,
     "typeRoots": [
