--- a/LibaryXMLAuto/LibaryXMLAuto.csproj
+++ b/LibaryXMLAuto/LibaryXMLAuto.csproj
@@ -63,9 +63,11 @@
     <Compile Include="ModelXmlSql\Model\FaceError\FaceMerginRest.cs">
       <DependentUpon>FaceMerginRest.xsd</DependentUpon>
     </Compile>
-    <Compile Include="ModelXmlSql\Model\Trebovanie\ModelTreb.cs">
-      <DependentUpon>ModelTreb.xsd</DependentUpon>
+    <Compile Include="ModelXmlSql\Model\Trebovanie\Reshenie.cs">
+      <SubType>code</SubType>
+      <DependentUpon>Reshenie.xsd</DependentUpon>
     </Compile>
+    <Compile Include="ModelXmlSql\Model\Trebovanie\Setting.cs" />
     <Compile Include="ReadOrWrite\CreateElement\CreteElement.cs" />
     <Compile Include="ErrorJurnal\ErrorJurnal.cs" />
     <Compile Include="ErrorJurnal\OkJurnal.cs" />
@@ -107,7 +109,7 @@
     <None Include="ModelXmlSql\Model\FaceError\FaceMerginRest.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="ModelXmlSql\Model\Trebovanie\ModelTreb.xsd">
+    <None Include="ModelXmlSql\Model\Trebovanie\Reshenie.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
@@ -129,6 +131,7 @@
       <XsdFilessListInn Include="ModelXmlAuto\ListInnSheme\*.xsd" />
       <XsdFilesFid Include="ModelXmlAuto\ModelFidZorI\*.xsd" />
       <XsdXmlSql Include="ModelXmlSql\Model\FaceError\*.xsd" />
+      <XsdXmlSqlTreb Include="ModelXmlSql\Model\Trebovanie\*.xsd" />
     </ItemGroup>
     <Message Importance="high" Text="CreateXsd" />
     <GetFrameworkSdkPath>
@@ -144,5 +147,6 @@
     <Exec Command="&quot;$(XsdToolPath)\xsd.exe&quot; &quot;%(XsdFilessListInn.FullPath)&quot; /classes /namespace:$(RootNamespace)ModelXmlAuto.FullInnCount /outputdir:ModelXmlAuto\ListInnSheme" />
     <Exec Command="&quot;$(XsdToolPath)\xsd.exe&quot; &quot;%(XsdFilesFid.FullPath)&quot; /classes /namespace:$(RootNamespace)ModelXmlAuto.ModelFidZorI /outputdir:ModelXmlAuto\ModelFidZorI" />
     <Exec Command="&quot;$(XsdToolPath)\xsd.exe&quot; &quot;%(XsdXmlSql.FullPath)&quot; /classes /namespace:$(RootNamespace)ModelXmlSql.Model.FaceError /outputdir:ModelXmlSql\Model\FaceError" />
+    <Exec Command="&quot;$(XsdToolPath)\xsd.exe&quot; &quot;%(XsdXmlSqlTreb.FullPath)&quot; /classes /namespace:$(RootNamespace)ModelXmlSql.Model.Trebovanie /outputdir:ModelXmlSql\Model\Trebovanie" />
   </Target>
 </Project>
